# ModsTranslationPack

./: README.md  pyproject.toml
.github/configs/: versions.json
.github/scripts/: multiversions.py  verify_structure.py
.github/workflows/: CI-CommentPR.yml  CI-Contributors.yml  CI-ModsCounter.yml  CI-OverrideCache.yml  CI-Pack-Beta.yml  CI-Pack-PullRequest.yml  CI-Pack-ReleasePlease.yml  CI-UploadR2.yml  CI-VerifyCommit.yml  Reusable-ImageResize.yml  Reusable-ResourcePacker.yml
MultiVersions/Forge/1.19/ftblibrary/lang/: zh_tw.json
MultiVersions/Forge/1.20/expatternprovider/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/1.20/ftbchunks/lang/: zh_tw.json
MultiVersions/Forge/1.20/ftblibrary/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/1.20/ftbquests/lang/: en_us.json
MultiVersions/Forge/1.20/mae2/ae2guide/: faulty_card.md  multi_p2p_tunnels.md  pattern_p2p_tunnel.md
MultiVersions/Forge/1.20/mae2/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/main/ae2/lang/: zh_tw.json
MultiVersions/Forge/main/biomeswevegone/lang/: zh_tw.json
MultiVersions/Forge/main/cozy_home/: en_us.json  zh_tw.json
MultiVersions/Forge/main/crystals_overhauled/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/main/emi/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/main/enderio/lang/: zh_tw.json
MultiVersions/Forge/main/ftbchunks/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/main/ftbessentials/lang/: en_us.json  zh_tw.json
MultiVersions/Forge/main/ftblibrary/lang/: en_us.json
MultiVersions/Forge/main/ftbquests/lang/: en_us.json  zh_tw.json
(+17 files in other folders)
